--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container header-container">
             <a  href="#" class="logo"> 
                 <img src="image/logo ansar.jpg" class="logo-image" alt="logo Ansar senegal"> 
-                  <span class="ansar"> ANSAR</span> <span class="senegal">SÉNÉGAL</span></a>
+                  <span class="ansar"> ANSAR</span> <span class="senegal">SENEGAL</span></a>
             <div class="mobile-menu">
                 <i class="fas fa-bars"></i>
             </div>
@@ -423,7 +423,7 @@
                         </div>
                         <div class="contact-detail">
                             <i class="fas fa-map-marker-alt"></i>
-                            <p>Touba route de alom Ga</p>
+                            <p>Adresse Touba Darou Marnane</p>
                         </div>
                         <div class="contact-detail">
                             <i class="fas fa-envelope"></i>
@@ -469,10 +469,11 @@
                     <h3>Ansar Sénégal</h3>
                     <p>Spécialiste en menuiserie aluminium, métallique, découpe numérique et décoration.</p>
                     <div class="social-links">
-                        <a href="https://facebook.comhttps:" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/share/19HUNLX72x/?mibextid=qi2Omg" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/ansar.senegal/profilecard/?igsh=MTFrdHpidHIxZHly" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="https://wa.me/221772712359" target="_blank"><i class="fab fa-whatsapp"></i></a>
-                        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                      <a href="https://www.tiktok.com/@ansar.senegal?_t=ZM-8yCKjnZwZbs&_r=1" target="_blank"><i class="fab fa-tiktok"></i></a>
+
                     </div>
                 </div>
                 <div class="footer-col">
@@ -498,9 +499,9 @@
                 </div>
                 <div class="footer-col">
                     <h3>Heures d'Ouverture</h3>
-                    <p>Lundi - Vendredi: 8h00 - 18h00</p>
+                    <p>Samedi - Jeudi: 8h00 - 18h00</p>
                     <p>Samedi: 9h00 - 13h00</p>
-                    <p>Dimanche: Fermé</p>
+                    <p>Vendredi: Fermé</p>
                 </div>
             </div>
             <div class="copyright">
